lexers/lexer_tokens.cc
/* Generated by re2c 1.1.1 on Sun Mar 10 21:08:16 2019 */
#line 1 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
#include <stdio.h>

#include "lexers/lexers.h"
using namespace std;

std::vector<Token> lex_tokens(const char *YYCURSOR)
{
	vector<Token> ans;
	const char *YYMARKER, *o1, *o2;
    const char *start = YYCURSOR;
	const char *yyt1;
	
loop:
    
#line 18 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\n':
	case '\v':
	case ' ':	goto yy6;
	case '(':
		yyt1 = YYCURSOR;
		goto yy8;
	case '*':
	case '+':
	case '-':
	case '/':
	case '\\':
	case '^':
		yyt1 = YYCURSOR;
		goto yy10;
	case '0':
		yyt1 = YYCURSOR;
		goto yy12;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = YYCURSOR;
		goto yy13;
	case '<':
	case '=':
	case '>':
		yyt1 = YYCURSOR;
		goto yy16;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = YYCURSOR;
		goto yy17;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 42 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ return ans; }
#line 119 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy4:
	++YYCURSOR;
yy5:
#line 37 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ 
            Token token(Token_type::INVALID, 0, 0);
            ans.push_back(token); 
            return ans; 
        }
#line 129 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy6:
	++YYCURSOR;
#line 63 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{goto loop;}
#line 134 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case ')':	goto yy20;
	default:	goto yy8;
	}
yy10:
	++YYCURSOR;
yy11:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 43 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ 
            Token token(Token_type::BI_OPERATOR, (size_t)(o1 - start), (size_t)(o2 - start));
            ans.push_back(token); 
            goto loop; 
        }
#line 152 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy12:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'B':
	case 'b':	goto yy22;
	case 'X':
	case 'x':	goto yy24;
	default:	goto yy5;
	}
yy13:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy13;
	case '.':	goto yy25;
	case 'E':
	case 'e':	goto yy27;
	case 'S':
	case 'U':
	case 's':
	case 'u':	goto yy28;
	default:	goto yy15;
	}
yy15:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 48 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ 
            Token token(Token_type::NUMBER_LITERAL, (size_t)(o1 - start), (size_t)(o2 - start));
            ans.push_back(token); 
            goto loop; 
        }
#line 196 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy10;
	default:	goto yy11;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy17;
	default:	goto yy19;
	}
yy19:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 58 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ 
            Token token(Token_type::SYMBOL, (size_t)(o1 - start), (size_t)(o2 - start));
            ans.push_back(token); 
            goto loop; 
        }
#line 280 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy20:
	++YYCURSOR;
	o1 = yyt1;
	o2 = YYCURSOR;
#line 53 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"
	{ 
            Token token(Token_type::LIST_LITERAL, (size_t)(o1 - start), (size_t)(o2 - start));
            ans.push_back(token); 
            goto loop; 
        }
#line 291 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.cc"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':	goto yy29;
	default:	goto yy23;
	}
yy23:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy5;
	} else {
		goto yy15;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy31;
	default:	goto yy23;
	}
yy25:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	case 'E':
	case 'e':	goto yy27;
	default:	goto yy15;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	case '+':
	case '-':	goto yy35;
	default:	goto yy23;
	}
yy28:
	++YYCURSOR;
	goto yy15;
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':	goto yy29;
	case 'S':
	case 'U':
	case 's':
	case 'u':	goto yy28;
	default:	goto yy23;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy31;
	case 'S':
	case 'U':
	case 's':
	case 'u':	goto yy28;
	default:	goto yy15;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	default:	goto yy15;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	default:	goto yy23;
	}
}
#line 64 "/cygdrive/C/repos/scalc/lexers/lexer_tokens.re"

}